--- a/views/student/nav.ejs
+++ b/views/student/nav.ejs
@@ -10,10 +10,15 @@
           <li class="dropdown">
             <a href="" class="dropbtn">My Courses <i class="fas fa-caret-down"></i></a>
             <div class="dropdown-content">
-              <a href="<%= user._id %>/courseInner">Course 1</a>
-              <a href="#">Course 2</a>
-              <a href="#">Course 3</a>
+              <% if (courses) { %>
+                <% courses.forEach((course)=> { %>
+                  <a href="<%= user._id %>/<%= course._id %>/courseInner">
+                    <%= course.title %>
+                  </a>
+                  <% }); %>
+                    <% } %>
             </div>
+
           </li>
         </ul>
         <div class="search">
