--- a/views/admin/users.ejs
+++ b/views/admin/users.ejs
@@ -89,98 +89,84 @@
         </section>
       </header>
       <section>
-        <% if (users.length) {%>
-        <table>
-          <tr>
-            <th colspan="5">
-              <div class="search">
-                <i class="fas fa-search"></i>
-                <input
-                  type="text"
-                  name="search"
-                  id="search"
-                  placeholder="Search users ..."
-                />
-              </div>
-            </th>
-            <th>
-              <button class="filter">
-                <i class="fa-solid fa-filter"></i>
-              </button>
-            </th>
-          </tr>
-
-          <tr>
-            <th></th>
-            <th>Name</th>
-            <th>Role</th>
-            <th>Email</th>
-            <th>Status</th>
-            <th></th>
-          </tr>
-
-          <% users.forEach(item=> { if(item.role !== "admin"){%>
-          <tr class="user" id="user">
-            <td>
-              <input type="checkbox" class="checkbox" />
-              <div class="right-and-wrong" style="display: none">
-                <i
-                  class="fa-solid fa-check"
-                  style="color: green; cursor: pointer"
-                ></i>
-                <i
-                  class="fa-solid fa-xmark"
-                  style="color: red; cursor: pointer"
-                ></i>
-              </div>
-            </td>
-            <td>
-              <div class="container">
-                <img src="<%= item.profilePic %>" alt="profile picture" />
-                <input type="text" value="<%= item.firstName +" "+ item.lastName
-                %>" readonly />
-              </div>
-            </td>
-            <td><input type="text" value="<%= item.role %>" readonly /></td>
-            <td>
-              <input type="text" name="email" value="<%= item.email || "-" %>"
-              readonly />
-            </td>
-            <td class="<%= item.isBanned ? `banned` : `active` %>">
-              <span><%- item.isBanned ? "Baned" : "Active" %></span>
-            </td>
-            <td style="position: relative">
-              <button class="dots btn">
-                <i class="fa-solid fa-ellipsis-vertical"></i>
-              </button>
-              <div class="options">
-                <ul data-userid="<%= item._id %>">
-                  <li>
-                    <button><i class="fa-solid fa-message"></i> Message</button>
-                  </li>
-                  <li>
-                    <button class="editbtn">
-                      <i class="fa-solid fa-pencil edit"></i> Edit
-                    </button>
-                  </li>
-                  <li>
-                    <button class="removebtn">
-                      <i class="fa-solid fa-trash delete"></i>
-                      Remove
-                    </button>
-                  </li>
-                  <li>
-                    <button class="banbtn">
-                      <i class="fa-solid fa-ban ban"></i>
-                      <span><%- item.isBanned ? "unban" : "Ban" %></span>
-                    </button>
-                  </li>
-                </ul>
-              </div>
-            </td>
-          </tr>
-          <%}}); %>
-        </table>
+        <% if (users.length) { %>
+          <table>
+            <tr>
+              <th colspan="6">
+                <div class="search">
+                  <i class="fas fa-search"></i>
+                  <input type="text" id="search" placeholder="Search by first name">
+                </div>
+              </th>
+              <th>
+                <button class="filter">
+                  <i class="fa-solid fa-filter"></i>
+                </button>
+              </th>
+            </tr>
+            <tr>
+              <th></th>
+              <th>Profile</th>
+              <th>Name</th>
+              <th>Role</th>
+              <th>Email</th>
+              <th>Status</th>
+              <th></th>
+            </tr>
+            <% users.forEach(item => {
+              if (item.role !== 'admin') { %>
+            <tr class="user">
+              <td>
+                <input type="checkbox" class="checkbox" />
+                <div class="right-and-wrong" style="display: none">
+                  <i class="fa-solid fa-check" style="color: green; cursor: pointer"></i>
+                  <i class="fa-solid fa-xmark" style="color: red; cursor: pointer"></i>
+                </div>
+              </td>
+              <td>
+                <div class="container">
+                  <img src="<%= item.profilePic %>" alt="profile picture" />
+                </div>
+              </td>
+              <td><%= item.firstName %> <%= item.lastName %></td>
+              <td><%= item.role %></td>
+              <td><%= item.email %></td>
+              <td class="<%= item.isBanned ? 'banned' : 'active' %>">
+                <span><%- item.isBanned ? 'Banned' : 'Active' %></span>
+              </td>
+              <td style="position: relative">
+                <button class="dots btn">
+                  <i class="fa-solid fa-ellipsis-vertical"></i>
+                </button>
+                <div class="options">
+                  <ul data-userid="<%= item._id %>">
+                    <li>
+                      <button><i class="fa-solid fa-message"></i> Message</button>
+                    </li>
+                    <li>
+                      <button class="editbtn">
+                        <i class="fa-solid fa-pencil edit"></i> Edit
+                      </button>
+                    </li>
+                    <li>
+                      <button class="removebtn">
+                        <i class="fa-solid fa-trash delete"></i>
+                        Remove
+                      </button>
+                    </li>
+                    <li>
+                      <button class="banbtn">
+                        <i class="fa-solid fa-ban ban"></i>
+                        <span><%- item.isBanned ? 'Unban' : 'Ban' %></span>
+                      </button>
+                    </li>
+                  </ul>
+                </div>
+              </td>
+            </tr>
+            <% }
+            }); %>
+          </table>        
       </section>
       <% } else { %>
       <p class="no-data">No data found!</p>
@@ -216,7 +202,27 @@
         }
       });
     </script>
+    <script>
+  const searchInput = document.getElementById('search');
+  const userRows = document.getElementsByClassName('user');
 
+  searchInput.addEventListener('input', function() {
+    const searchQuery = this.value.toLowerCase();
+
+    for (let i = 0; i < userRows.length; i++) {
+      const firstName = userRows[i].getElementsByTagName('td')[2].textContent.toLowerCase();
+
+      if (firstName.includes(searchQuery)) {
+        userRows[i].style.display = '';
+      } else {
+        userRows[i].style.display = 'none';
+     
+      }
+    }
+  });
+</script>
+
+  
     <!-- create new user  -->
     <script type="module">
       import { validateForm } from "/js/formValidation.js";
