--- a/views/admin/courses.ejs
+++ b/views/admin/courses.ejs
@@ -33,65 +33,118 @@
   <body data-userid="<%= user._id %>">
     <%- include("./nav.ejs") %>
     <main>
-      <h1>Courses</h1>
-      <p>Welcome admin</p>
+      <header>
+        <h1>Courses</h1>
+        <button class="new-course btn" id="newCourseBtn">+ New Course</button>
+      </header>
+
+      <section class="add-new-course" id="addNewCourse">
+        <p style="color: red" id="error"></p>
+        <form method="post" id="form">
+          <div>
+            <label for="Course's Name">Course's Name : </label>
+            <input id="courseName" type="text" name="courseName" />
+          </div>
+          <div>
+            <label for="Number of students">Number of students: </label>
+            <input id="numOfStudents" type="number" name="numberofStudent" />
+          </div>
+          <div>
+            <label for="username">Instructor's name :</label>
+            <select id="instructorName" name="instructorName">
+              <% if (instructors){ %> <% instructors.forEach(instructor => { %>
+              <option data-instructorId="<%= instructor._id %>">
+                <%= instructor.firstName %>
+              </option>
+              <% });} %>
+              <option data-instructorId="NULL">No Instructor</option>
+            </select>
+          </div>
+          <div>
+            <button class="btn" id="submit">Add</button>
+          </div>
+        </form>
+      </section>
+
+      <% if (course.length>0) {%>
+      <section class="courses">
+        <% course.forEach(c=> { %>
+
+        <a id="anchor" href="/admin/<%= user._id%>/courses/courseInner/<%= c._id %>">
+          <article>
+            <div class="image">
+              <img src="<%= c.coverPic %>" alt="cover picture" />
+            </div>
+
+            <div class="article-body">
+              <h2><%= c.title %></h2>
+            </div>
+          </article>
+        </a>
+
+        <% })} else {%>
+        <div><p>no courses to show</p></div>
+        <% }%>
+      </section>
+
+      <script type="module">
+        const menu = document.getElementById("addNewCourse");
+        const newCourseBtn = document.getElementById("newCourseBtn");
+
+        newCourseBtn.addEventListener("click", () => {
+          menu.classList.toggle("activee");
+        });
+
+        document.addEventListener("dblclick", function (e) {
+          if (
+            menu.classList.contains("activee") &&
+            !menu.contains(e.target) &&
+            !newCourseBtn.contains(e.target)
+          ) {
+            menu.classList.remove("activee");
+            document.getElementById("form").reset();
+          }
+        });
+
+        // << Start >> form Validation
+        import { validateForm } from "/js/formValidation.js";
+        const form = document.getElementById("form");
+        const error = document.getElementById("error");
+
+        form.addEventListener("submit", async (e) => {
+          e.preventDefault();
+
+          error.style.color = "red";
+          const errorMsg = validateForm(form);
+          if (errorMsg) return (error.innerHTML = errorMsg);
+
+          try {
+            const res = await fetch("/admin/courses", {
+              method: "POST",
+              headers: { "Content-Type": "application/json" },
+              body: JSON.stringify({
+                title: document.getElementById("courseName").value,
+                numberOfStudents:
+                  document.getElementById("numOfStudents").value,
+                instructorId:
+                  document.getElementById("instructorName").options[
+                    document.getElementById("instructorName").selectedIndex
+                  ].dataset.instructorid,
+              }),
+            });
+            const data = await res.json();
+            if (data.msg) {
+              error.style.color = "green";
+              error.innerHTML = "Added";
+              location.reload();
+            } else if (data.err) location.assign("/error");
+          } catch (err) {
+            location.assign("/error");
+          }
+        });
+        // << End >> form Validation
+      </script>
+      <%- include("../chatGPT.ejs") %>
     </main>
-</body>
-
+  </body>
 </html>
-
-<script type="module">
-  const menu = document.getElementById("addNewCourse");
-  const newCourseBtn = document.getElementById("newCourseBtn");
-
-  newCourseBtn.addEventListener("click", () => {
-    menu.classList.toggle("activee");
-  });
-
-  document.addEventListener("dblclick", function (e) {
-    if (
-      menu.classList.contains("activee") &&
-      !menu.contains(e.target) &&
-      !newCourseBtn.contains(e.target)
-    ) {
-      menu.classList.remove("activee");
-      document.getElementById("form").reset();
-    }
-  });
-
-  // << Start >> form Validation
-  import { validateForm } from "../js/formValidation.js";
-  const form = document.getElementById("form");
-  const error = document.getElementById("error");
-
-  form.addEventListener("submit", async (e) => {
-    e.preventDefault();
-
-    error.style.color = "red";
-    const errorMsg = validateForm(form);
-    if (errorMsg) return (error.innerHTML = errorMsg);
-
-    try {
-      const res = await fetch("/admin/courses", {
-        method: "POST",
-        headers: { "Content-Type": "application/json" },
-        body: JSON.stringify({
-          title: document.getElementById("courseName").value,
-          numberOfStudents: document.getElementById("numOfStudents").value,
-          instructorId:
-            document.getElementById("instructorName").options[
-              document.getElementById("instructorName").selectedIndex
-            ].dataset.instructorid,
-        }),
-      });
-      const data = await res.json();
-      if (data.msg) {
-        error.style.color = "green";
-        error.innerHTML = "Added";
-      } else if (data.err) location.assign("/error");
-    } catch (err) {
-      location.assign("/error");
-    }
-  });
-  // << End >> form Validation
-</script>
