--- a/views/admin/courseInner.ejs
+++ b/views/admin/courseInner.ejs
@@ -1,92 +1,41 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>student / CourseInner</title>
-    <!-- font-awesome -->
-    <link
-      rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.3.0/css/all.min.css"
-    />
-    <link
-      rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
-      integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw=="
-      crossorigin="anonymous"
-      referrerpolicy="no-referrer"
-    />
-    <link rel="stylesheet" href="/css/general.css" />
-    <link rel="stylesheet" href="/css/admin/nav.css" />
-    <link rel="stylesheet" href="/css/admin/couresInner.css" />
 
-    <link
-      rel="stylesheet"
-      href="https://use.fontawesome.com/releases/v5.15.4/css/all.css"
-    />
-    <link
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
-      rel="stylesheet"
-      integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3"
-      crossorigin="anonymous"
-    />
-    <link
-      rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.3.0/css/all.min.css"
-    />
+<head>
+  <meta charset="UTF-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>student / CourseInner</title>
+  <!-- font-awesome -->
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.3.0/css/all.min.css" />
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
+    integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw=="
+    crossorigin="anonymous" referrerpolicy="no-referrer" />
+  <link rel="stylesheet" href="/css/general.css" />
+  <link rel="stylesheet" href="/css/admin/nav.css" />
+  <link rel="stylesheet" href="/css/admin/couresInner.css" />
 
-    <script
-      src="https://kit.fontawesome.com/0b0cd0c012.js"
-      crossorigin="anonymous"
-    ></script>
-  </head>
-  <body>
-    <%- include("./nav.ejs") %>
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.4/css/all.css" />
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous" />
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.3.0/css/all.min.css" />
+
+  <script src="https://kit.fontawesome.com/0b0cd0c012.js" crossorigin="anonymous"></script>
+</head>
+
+<body>
+  <%- include("./nav.ejs") %>
     <main>
-      <header>
-        <h1>Courses</h1>
-        <button class="new-course btn" id="newCourseBtn">+ Add student</button>
-      </header>
 
-      <section class="add-new-course" id="addNewCourse">
-        <p style="color: red" id="error"></p>
-        <form method="post" id="form">
-          <div>
-            <label for="Course's Name"
-              >Course's Name : <%= course.title %>
-            </label>
-          </div>
-          <div>
-            <label for="Number of students"
-              >Number of students: <%= course.numberOfStudents%>
-            </label>
-          </div>
-          <div>
-            <label for="username">Student's name :</label>
-            <select id="studentName" name="studentName">
-              <% if (students){ %> <% students.forEach(student => { %> <% if (!
-              Arrayofstudents.includes(student._id)){ %>
-              <option data-studentid="<%= student._id %>">
-                <%= student.firstName %> <%= student.lastName %>
-              </option>
-              <% }});} %>
-            </select>
-          </div>
-          <div>
-            <button data-studentid="<%= students._id%>" class="btn" id="submit">
-              Add
-            </button>
-          </div>
-        </form>
-      </section>
 
       <section id="course-inner">
         <div class="overview">
           <img class="course-img" src="<%= course.coverPic %>" alt="" />
           <div class="course-head">
             <div class="c-name">
-              <h2><%= course.title %></h2>
+              <h2>
+                <%= course.title %>
+              </h2>
               <p>
                 Numbers of studnets Enrolled : <%= course.numberOfStudents%>
               </p>
@@ -97,34 +46,51 @@
             <div class="tutor">
               <img src="<%= instructor.profilePic %>" alt="" />
               <div class="tutor-det">
-                <h5><%= instructor.firstName %> <%= instructor.lastName %></h5>
+                <h5>
+                  <%= instructor.firstName %>
+                    <%= instructor.lastName %>
+                </h5>
                 <p>Web Developer At Google</p>
               </div>
             </div>
           </section>
           <section>
             <h3>Course Overview</h3>
-            <p><%= course.description %></p>
+            <p>
+              <%= course.description %>
+            </p>
           </section>
         </div>
         <section>
-          <div class="enroll">
-            <h3>This course includes:</h3>
-            <p><i class="fa-solid fa-video"></i> 52 hours video</p>
-            <p><i class="far fa-newspaper"></i> 75 articles</p>
-            <p>
-              <i class="fa-solid fa-cloud-arrow-down"></i>Downloadable resources
-            </p>
-            <p><i class="fa-solid fa-infinity"></i>Full Lifetime access</p>
-            <p>
-              <i class="fa-solid fa-mobile"></i> access on mobile application
-            </p>
-            <p><i class="fa-solid fa-paperclip"></i> Assignments</p>
-            <p><i class="fa-solid fa-award"></i>Certificate of completion</p>
-            <div class="enroll-btn">
-              <a class="blue" href="#">Enroll Course</a>
-            </div>
-          </div>
+          <% if (students.length) {%>
+            <table>
+              <tr>
+                <th></th>
+                <th>Name</th>
+                <th>Add</th>
+              </tr>
+
+              <% students.forEach(item=> { %>
+                <tr class="user" id="user">
+                  <td>
+                    <input type="checkbox" class="checkbox" />
+                    <div class="right-and-wrong" style="display: none">
+                      <i class="fa-solid fa-check" style="color: green; cursor: pointer"></i>
+                      <i class="fa-solid fa-xmark" style="color: red; cursor: pointer"></i>
+                    </div>
+                  </td>
+                  <td>
+                    <div class="container">
+                      <input type="text" value="<%= item.firstName + ' ' + item.lastName %>" readonly />
+                    </div>
+                  </td>
+                  <td>
+                    <a href="/admin/<%= course._id %>/addStudent/<%= item._id %>">Add</a>
+                  </td>
+                </tr>
+                <% }); %>
+            </table>
+            <% } %>
         </section>
       </section>
     </main>
@@ -151,35 +117,41 @@
       import { validateForm } from "/js/formValidation.js";
       const form = document.getElementById("form");
       const error = document.getElementById("error");
-      const button = document.getElementById("submit");
-      const data = button.getAttribute('data-studentid');
-      form.addEventListener("submit", async (e) => {
-        e.preventDefault();
+      const addStudentButton = document.getElementsByClassName("addStudent");
 
-        error.style.color = "red";
-        const errorMsg = validateForm(form);
-        if (errorMsg) return (error.innerHTML = errorMsg);
-
-        try {
-          const res = await fetch("/courses/courseInner/addstudent", {
-            method: "put",
-            headers: { "Content-Type": "application/json" },
-            body: JSON.stringify({
-              courseId: "<%= course._id %>",
-              studnetid: data,
-            }),
-          });
-          const data = await res.json();
-          if (data.msg) {
-            error.style.color = "green";
-            error.innerHTML = "Added";
-            location.reload();
-          } else if (data.err) location.assign("/error");
-        } catch (err) {
-          location.assign("/error");
-        }
+      Array.from(addStudentButton).forEach((button) => {
+        const studentId = button.dataset.studentid;
+        form.addEventListener("submit", async (e) => {
+          e.preventDefault();
+          error.style.color = "red";
+          const errorMsg = validateForm(form);
+          console.log(studentId);
+          if (errorMsg) return (error.innerHTML = errorMsg);
+          // start Add Student 
+          try {
+            const res = await fetch("/courses/<%= course.id%>/addstudent/" + studentId, {
+              method: "put",
+              headers: { "Content-Type": "application/json" },
+              body: JSON.stringify({
+                courseId: "<%= course._id %>",
+                studnetId: studentId,
+              }),
+            });
+            const data = await res.json();
+            if (data.msg) {
+              error.style.color = "green";
+              error.innerHTML = "Added";
+              location.reload();
+            } else if (data.err) location.assign("/error");
+          } catch (err) {
+            location.assign("/error");
+          }
+        });
       });
+
+
       // << End >> form Validation
     </script>
-  </body>
+</body>
+
 </html>
