--- a/views/instructor/inner-course.ejs
+++ b/views/instructor/inner-course.ejs
@@ -1,108 +1,114 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="icon" type="image/x-icon" href="/img/logos/DSK-JF-logo.png" />
-    <!-- font-awesome -->
-    <link
-      rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
-      integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw=="
-      crossorigin="anonymous"
-      referrerpolicy="no-referrer"
-    />
-    <!-- toastify -->
-    <link
-      rel="stylesheet"
-      href="https://cdn.jsdelivr.net/npm/toastify-js/src/toastify.min.css"
-    />
-    <script src="https://cdn.jsdelivr.net/npm/toastify-js"></script>
-    <!-- style sheets -->
-    <link rel="stylesheet" href="/css/general.css" />
-    <link rel="stylesheet" href="/css/instructor/nav.css" />
-    <link rel="stylesheet" href="/css/instructor/inner-course.css" />
-    <title><%= course.title %></title>
-  </head>
 
-  <body data-userid="<%= user._id %>" data-courseid="<%= course._id %>">
-    <%- include("./nav.ejs") %>
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <link rel="icon" type="image/x-icon" href="/img/logos/DSK-JF-logo.png" />
+  <!-- font-awesome -->
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
+    integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw=="
+    crossorigin="anonymous" referrerpolicy="no-referrer" />
+  <!-- toastify -->
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/toastify-js/src/toastify.min.css" />
+  <script src="https://cdn.jsdelivr.net/npm/toastify-js"></script>
+  <!-- style sheets -->
+  <link rel="stylesheet" href="/css/general.css" />
+  <link rel="stylesheet" href="/css/instructor/nav.css" />
+  <link rel="stylesheet" href="/css/instructor/inner-course.css" />
+  <title>
+    <%= course.title %>
+  </title>
+</head>
+
+<body data-userid="<%= user._id %>" data-courseid="<%= course._id %>">
+  <%- include("./nav.ejs") %>
     <main>
       <%- include("./inner-course-header.ejs") %>
-      <section class="display">
-        <!-- link -->
-        <div class="my-links">
-          <h2>Links</h2>
-          <% if (links) { %> <% links.forEach(link=> { %>
-          <div>
-            <!-- fix the path  -->
-            <a href="<%=link.link %>" target="_blank"> <%=link.name %> </a>
-            <button class="deleteLink" data-linkid="<%=link._id %>">
-              Delete Link
-            </button>
+        <section class="display">
+          <!-- link -->
+          <div class="my-links">
+            <h2>Links</h2>
+            <% if (links) { %>
+              <% links.forEach(link=> { %>
+                <div>
+                  <!-- fix the path  -->
+                  <a href="<%=link.link %>" target="_blank">
+                    <%=link.name %>
+                  </a>
+                  <button class="deleteLink" data-linkid="<%=link._id %>">
+                    Delete Link
+                  </button>
+                </div>
+                <% }); %>
+                  <% } else{%>
+                    <p>no links</p>
+                    <% } %>
           </div>
-          <% }); %> <% } else{%>
-          <p>no links</p>
-          <% } %>
-        </div>
 
-        <!-- file -->
-        <div class="my-files">
-          <h2>Files:</h2>
-          <% if (files) { %> <% files.forEach(file=> { %>
-          <div>
-            <a href="<%= file.filePath %>" download>file</a>
-            <button class="deleteFile" data-fileid="<%=file._id %>">
-              Delete File
-            </button>
+          <!-- file -->
+          <div class="my-files">
+            <h2>Files:</h2>
+            <% if (files) { %>
+              <% files.forEach(file=> { %>
+                <div>
+                  <a href="<%= file.filePath %>" download>file</a>
+                  <button class="deleteFile" data-fileid="<%=file._id %>">
+                    Delete File
+                  </button>
+                </div>
+                <% }); %>
+                  <% } else{%>
+                    <p>no files</p>
+                    <% } %>
           </div>
-          <% }); %> <% } else{%>
-          <p>no files</p>
-          <% } %>
-        </div>
 
-        <!-- submissions -->
-        <div class="my-submissions">
-          <h2>Submissions:</h2>
-          <% if (submissions) { %> <% submissions.forEach(submission=> { %>
-          <div>
-            <h3><%= submission.title %></h3>
-            <p>Description: <%= submission.description %></p>
-            <p>
-              Deadline: <%= submission.deadline %>
-              <button
-                class="deleteSubmission"
-                data-submissionid="<%=submission._id %>"
-              >
-                Delete Submission
-              </button>
-            </p>
-            <!-- Display other project properties here -->
+          <!-- submissions -->
+          <div class="my-submissions">
+            <h2>Submissions:</h2>
+            <% if (submissions) { %>
+              <% submissions.forEach(submission=> { %>
+                <div>
+                  <h3>
+                    <%= submission.title %>
+                  </h3>
+                  <p>Description: <%= submission.description %>
+                  </p>
+                  <p>
+                    Deadline: <%= submission.deadline %>
+                      <button class="deleteSubmission" data-submissionid="<%=submission._id %>">
+                        Delete Submission
+                      </button>
+                  </p>
+                  <!-- Display other project properties here -->
+                </div>
+                <% }); %>
+                  <% } else{%>
+                    <p>no files</p>
+                    <% } %>
           </div>
-          <% }); %> <% } else{%>
-          <p>no files</p>
-          <% } %>
-        </div>
 
-        <!-- projects  -->
-        <div class="my-projects">
-          <h2>Projects</h2>
-          <% if (projects) { %> <% projects.forEach(project=> { %>
-          <div>
-            <h3><%= project.title %></h3>
-            <p>Description: <%= project.description %></p>
-            <button
-                class="deleteProject"
-                data-projectid="<%=project._id %>"
-              >
-                Delete Project
-              </button>
+          <!-- projects  -->
+          <div class="my-projects">
+            <h2>Projects</h2>
+            <% if (projects) { %>
+              <% projects.forEach(project=> { %>
+                <div>
+                  <h3>
+                    <%= project.title %>
+                  </h3>
+                  <p>Description: <%= project.description %>
+                  </p>
+                  <button class="deleteProject" data-projectid="<%=project._id %>">
+                    Delete Project
+                  </button>
+                </div>
+                <% }); %>
+                  <% } else{%>
+                    <p>no projects</p>
+                    <% } %>
           </div>
-          <% }); %> <% } else{%>
-          <p>no projects</p>
-          <% } %>
-        </div>
-      </section>
+        </section>
     </main>
 
     <!-- editable title -->
@@ -273,5 +279,6 @@
         });
       });
     </script>
-  </body>
+</body>
+
 </html>
