displaying the students in the instructor

--- a/views/admin/courseInner.ejs
+++ b/views/admin/courseInner.ejs
@@ -37,7 +37,7 @@
                 <%= course.title %>
               </h2>
               <p>
-                Numbers of studnets Enrolled : <%= course.numberOfStudents%>
+                Numbers of students Enrolled : <%= course.numberOfStudents%>
               </p>
             </div>
           </div>
