--- a/views/student/nav.ejs
+++ b/views/student/nav.ejs
@@ -10,10 +10,10 @@
           <li class="dropdown">
             <a href="" class="dropbtn">My Courses <i class="fas fa-caret-down"></i></a>
             <div class="dropdown-content">
-              <% if (courses) { %>
+              <% if (courses.length> 0) { %>
                 <% courses.forEach((course)=> { %>
                   <a href="<%= user._id %>/<%= course._id %>/courseInner">
-                    <%= course.title %>
+                    <%=course.title %>
                   </a>
                   <% }); %>
                     <% } %>
