--- a/views/student/courseInner.ejs
+++ b/views/student/courseInner.ejs
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>student / CourseInner</title>
     <!-- font-awesome -->
-     <link
+    <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.3.0/css/all.min.css"
     />
@@ -16,10 +16,10 @@
       integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw=="
       crossorigin="anonymous"
       referrerpolicy="no-referrer"
-    /> 
-    <link rel="stylesheet" href="/css/student/innercourse.css">
-    <link rel="stylesheet" href="/css/student/home.css">
-    
+    />
+    <link rel="stylesheet" href="/css/student/innercourse.css" />
+    <link rel="stylesheet" href="/css/student/home.css" />
+
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -29,18 +29,18 @@
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.3.0/css/all.min.css"
-    /> 
- 
+    />
+
     <script
       src="https://kit.fontawesome.com/0b0cd0c012.js"
       crossorigin="anonymous"
-    ></script> 
+    ></script>
   </head>
   <body>
     <header>
       <!-- Navigation -->
       <%- include("./nav.ejs") %>
-            <!-- Title section -->
+      <!-- Title section -->
       <section id="about-home">
         <h2>Enroll Our Popular Courses And Skill Up</h2>
       </section>
@@ -50,10 +50,10 @@
         <!-- Left section -->
 
         <div class="overview">
-          <img class="course-img" src="img/courses/c1.jpg" alt="" />
+          <img class="course-img" src="<%=course.coverPic %>" alt="" />
           <div class="course-head">
             <div class="c-name">
-              <h2>Course 1</h2>
+              <h2><%=course.title %></h2>
               <div class="star">
                 <i class="fa-regular fa-star"></i>
                 <i class="fa-regular fa-star"></i>
@@ -61,109 +61,91 @@
                 <i class="fa-regular fa-star"></i>
                 <i class="fa-regular fa-star"></i>
               </div>
-              <p>
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Cum
-                quis possimus molestiae, voluptate recusandae maiores.
-              </p>
+              <p><%=course.description %></p>
             </div>
-            <span>$49.99</span>
           </div>
 
           <!-- Instructor section -->
           <section>
-            <h3>Instructor</h3>
+            <h3><%=instructor.firstName %> <%=instructor.lastName %></h3>
             <div class="tutor">
               <!-- professor img  -->
-              <img src="img/courses/tutor.jpg" alt="" />
-              <div class="tutor-det">
-                <h5>John Doe</h5>
-                <p>Web Developer At Google</p>
-              </div>
+              <img src="<%=instructor.profilePic %>" alt="" />
             </div>
           </section>
 
           <!-- Course detail section -->
           <section>
-            <h3>Course Overview</h3>
-            <p>
-              Lorem ipsum, dolor sit amet consectetur adipisicing elit. Officia
-              eveniet itaque ducimus id cum voluptas repellendus nulla,
-              repellat, nostrum quas error sequi dolores fugiat, eius ipsa
-              assumenda dolore. Ab, nobis.Lorem ipsum, dolor sit amet
-              consectetur adipisicing elit. Officia eveniet itaque ducimus id
-              cum voluptas repellendus nulla, repellat, nostrum quas error sequi
-              dolores fugiat, eius ipsa assumenda dolore. Ab, nobis. Lorem
-              ipsum, dolor sit amet consectetur adipisicing elit. Officia
-              eveniet itaque ducimus id cum voluptas repellendus nulla,
-              repellat, nostrum quas error sequi dolores fugiat, eius ipsa
-              assumenda dolore. Ab, nobis.Lorem ipsum, dolor sit amet
-              consectetur adipisicing elit. Officia eveniet itaque ducimus id
-              cum voluptas repellendus nulla, repellat, nostrum quas error sequi
-              dolores fugiat, eius ipsa assumenda dolore. Ab, nobis.Lorem ipsum,
-              dolor sit amet consectetur adipisicing elit. Officia eveniet
-              itaque ducimus id cum voluptas repellendus nulla, repellat,
-              nostrum quas error sequi dolores fugiat, eius ipsa assumenda
-              dolore. Ab, nobis.Lorem ipsum, dolor sit amet consectetur
-              adipisicing elit. Officia eveniet itaque ducimus id cum voluptas
-              repellendus nulla, repellat, nostrum quas error sequi dolores
-              fugiat, eius ipsa assumenda dolore. Ab, nobis.
-            </p>
+            <h3>Useful Links</h3>
+            <div class="my-links">
+              <% if (links) { %> <% links.forEach(link=> { %>
+              <div>
+                <!-- fix the path  -->
+                <a href="<%=link.link %>" target="_blank"
+                  ><i class="fa-solid fa-link"></i>
+                  <%=link.name %>
+                </a>
+              </div>
+              <% }); %> <% } else{%>
+              <p>no links</p>
+              <% } %>
+            </div>
           </section>
           <hr />
           <!-- What you'll Learn section -->
           <section>
-            <h3>What you'll Learn</h3>
+            <h3>Course Files</h3>
             <div class="learn">
-              <p>
-                <i class="far fa-check-circle"></i> Lorem ipsum, dolor sit amet
-                consectetur adipisicing elit.
-              </p>
-              <p>
-                <i class="far fa-check-circle"></i> Lorem ipsum, dolor sit amet
-                consectetur adipisicing elit.
-              </p>
-              <p>
-                <i class="far fa-check-circle"></i> Lorem ipsum, dolor sit amet
-                consectetur adipisicing elit.
-              </p>
-              <p>
-                <i class="far fa-check-circle"></i> Lorem ipsum, dolor sit amet
-                consectetur adipisicing elit.
-              </p>
-              <p>
-                <i class="far fa-check-circle"></i> Lorem ipsum, dolor sit amet
-                consectetur adipisicing elit.
-              </p>
-              <p>
-                <i class="far fa-check-circle"></i> Lorem ipsum, dolor sit amet
-                consectetur adipisicing elit.
-              </p>
+              <%if(files){ %> <% files.forEach(file => {%>
+              <div>
+                <a href="<%= file.filePath %>" download
+                  ><i class="fa-solid fa-file"></i> file</a
+                >
+              </div>
+              <% }); %> <% } %>
+
+              <h3>Course Submission</h3>
+              <div class="my-submissions">
+                <% if (submissions) { %> <% submissions.forEach(submission=> {
+                %>
+                <div>
+                  <h3>
+                    <i class="fa-regular fa-pen-to-square"></i> <%=
+                    submission.title %>
+                  </h3>
+                  <p>Description: <%= submission.description %></p>
+                  <p>Deadline: <%= submission.deadline %></p>
+                </div>
+                <% }); %> <% } else{%>
+                <p>no files</p>
+                <% } %>
+              </div>
             </div>
           </section>
         </div>
 
-        <!-- Left section -->
+        <!-- Project section -->
         <section>
           <div class="enroll">
-            <h3>This course includes:</h3>
-            <p><i class="fa-solid fa-video"></i> 52 hours video</p>
-            <p><i class="far fa-newspaper"></i> 75 articles</p>
-            <p>
-              <i class="fa-solid fa-cloud-arrow-down"></i>Downloadable resources
-            </p>
-            <p><i class="fa-solid fa-infinity"></i>Full Lifetime access</p>
-            <p>
-              <i class="fa-solid fa-mobile-screen-button"></i> access on mobile
-              and TV
-            </p>
-            <p><i class="fa-solid fa-paperclip"></i> Assignments</p>
-            <p><i class="fa-solid fa-trophy"></i>Certificate of completion</p>
+            <h3><i class="fa-solid fa-list-check"></i> Course Project:</h3>
+            <div class="my-projects">
+              <% if (projects) { %> <% projects.forEach(project=> { %>
+              <div>
+                <h3><%= project.title %></h3>
+                <p>Description: <%= project.description %></p>
+              </div>
+              <% }); %> <% } else{%>
+              <p>no projects</p>
+              <% } %>
+            </div>
             <div class="enroll-btn">
-              <a class="blue" href="#">Enroll Course</a>
+              <a class="blue" href="#">Form a team</a>
+              <a class="blue" href="#">View details</a>
             </div>
           </div>
         </section>
       </section>
     </main>
-  </body>
+     
+  </body>
 </html>
