--- a/views/instructor/viewAll.ejs
+++ b/views/instructor/viewAll.ejs
@@ -12,6 +12,13 @@
   <!-- toastify -->
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/toastify-js/src/toastify.min.css" />
   <script src="https://cdn.jsdelivr.net/npm/toastify-js"></script>
+  <!-- Include the jQuery library -->
+  <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+
+  <!-- Include the Font Awesome CSS -->
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"
+    integrity="sha512-TQrSO3HFim4hsJKnzi65aIbQRQqnnPLUu8vTdPm2jp8Q+ZksqLrN7aJGJvdsxIKhzZyN/eIB32r8cAdVbMms+A=="
+    crossorigin="anonymous" referrerpolicy="no-referrer" />
   <!-- style sheets -->
   <link rel="stylesheet" href="/css/general.css" />
   <link rel="stylesheet" href="/css/instructor/nav.css" />
@@ -19,6 +26,146 @@
   <title>
     <%= course.title %>
   </title>
+  <style>
+    .profile {
+      max-width: 500px;
+      border: 1px solid #ccc;
+      border-radius: 20px;
+      padding: 2em;
+      margin: 1em;
+      display: flex;
+      flex-flow: row wrap;
+      justify-content: space-between;
+      align-items: center;
+      align-content: center;
+      position: relative;
+    }
+
+    .profile figure {
+      margin-left: 20%;
+    }
+
+    .profile figure img {
+      max-width: 150px;
+      max-height: 150px;
+      border-radius: 50%;
+      padding: 10px;
+      box-shadow: 0px 0px 20px rgba(21, 21, 21, 0.15);
+    }
+
+    .profile header h1 small {
+      display: inline-block;
+      clear: both;
+      font-size: 18px;
+      opacity: 0.6;
+    }
+
+    .profile main {
+      display: none;
+    }
+
+    .profile main dl {
+      display: inline-block;
+      width: 100%;
+    }
+
+    .profile main dl dt,
+    .profile main dl dd {
+      float: left;
+      padding: 8px 5px;
+      margin: 0;
+      border-bottom: 1px solid lighten(21, 21, 21, 80);
+    }
+
+    .profile main dl dt {
+      width: 50%;
+      padding-right: 10px;
+      font-weight: bold;
+    }
+
+    .profile main dl dt:after {
+      content: ":";
+    }
+
+    .profile main dl dd {
+      width: 50%;
+    }
+
+    .toggle {
+      position: absolute;
+      background: #fff;
+      top: 30px;
+      left: 30px;
+      width: 40px;
+      height: 40px;
+      line-height: 40px;
+      font-size: 24px;
+      text-align: center;
+      z-index: 20;
+      vertical-align: middle;
+      box-shadow: 0px 0px 10px rgba(21, 21, 21, 0.15);
+      cursor: pointer;
+      border-radius: 20px;
+      user-select: none;
+      transition: box-shadow 300ms ease;
+    }
+
+    .toggle:hover {
+      box-shadow: 0px 0px 10px rgba(21, 21, 21, 0.25);
+    }
+
+    .toggle main {
+      font-size: 16px;
+    }
+
+    .view_details {
+      position: absolute;
+      top: -5000px;
+      left: -5000px;
+    }
+
+    label {
+      display: block;
+      cursor: pointer;
+    }
+
+    @media screen and (max-width: 520px) {
+      .profile {
+        padding: 1em;
+        margin: 1em;
+      }
+
+      .profile img {
+        max-width: 100%;
+        height: auto;
+      }
+
+      .profile main dl,
+      .profile main dl dt,
+      .profile main dl dd {
+        display: block;
+        width: 100%;
+        float: none;
+      }
+
+      .profile main dl dt {
+        border-bottom: none;
+      }
+
+      .profile main dl dd {
+        margin-bottom: 10px;
+      }
+
+      .profile .toggle {
+        top: 15px;
+        left: 15px;
+      }
+    }
+  </style>
+
+
+
+
 </head>
 
 <body data-userid="<%= user._id %>" data-courseid="<%= course._id %>">
@@ -26,13 +173,55 @@
     <main>
       <%- include("./inner-course-header.ejs") %>
         <section>
-            <% if(students){ %>
-                <% students.forEach(student => {%>
-                    
-                <%}); %>
-                
-                <% } %>
+          <% if (students.length) { %>
+            <% students.forEach((student)=> { %>
+              <div class="profile">
+                <figure>
+                  <img src="<%= student.profilePic  %>" alt="" />
+                </figure>
+                <header>
+                  <h1>
+                    <%= student.firstName %>
+                      <%= student.lastName %>
+                  </h1>
+                </header>
+                <div class="toggle">
+                  <input type="checkbox" class="view_details" id="view_details">
+                  <label for="view_details" title="tap here to view full profile">☰</label>
+                </div>
+                <main>
+                  <dl>
+                    <dt>Full name</dt>
+                    <dd>
+                      <%= student.firstName + " " + student.lastName %>
+                    </dd>
+                    <dt>gpa</dt>
+                    <dd>
+                      <%= student.gpa %>
+                    </dd>
+                    <dt>email</dt>
+                    <dd>
+                      <%= student.email %>
+                    </dd>
+                    <dt>username</dt>
+                    <dd>
+                      <%= student.username %>
+                    </dd>
+                    <dt>Social</dt>
+                    <dd>
+                      <a href="#"><i class="fa fa-twitter-square" aria-hidden="true"></i></a>
+                      <a href="#"><i class="fa fa-facebook-official" aria-hidden="true"></i></a>
+                    </dd>
+                  </dl>
+                </main>
+              </div>
+              <!-- end profile -->
+              <% }); %>
+                <% } else { %>
+                  <p>No students found.</p>
+                  <% } %>
         </section>
+
     </main>
 
     <!-- editable title -->
@@ -172,8 +361,7 @@
     </script>
     <!-- Delete Project  -->
     <script>
-      const deleteProject =
-        document.getElementsByClassName("deleteProject");
+      const deleteProject = document.getElementsByClassName("deleteProject");
       Array.from(deleteProject).forEach((b) => {
         b.addEventListener("click", async (e) => {
           const projectId = b.dataset.projectid;
@@ -199,6 +387,32 @@
           } catch (err) {
             console.log(err);
             location.assign("/error");
+          }
+        });
+      });
+    </script>
+    <!-- Open card -->
+    <script>
+      $(function () {
+        $('.view_details').click(function () {
+          if ($(this).is(':checked')) {
+            $(this)
+              .next('label')
+              .html('&times;')
+              .attr('title', 'tap here to close full profile');
+            $(this)
+              .parent()
+              .next('main')
+              .slideDown('normal');
+          } else {
+            $(this)
+              .next('label')
+              .html('☰')
+              .attr('title', 'tap here to view full profile');
+            $(this)
+              .parent()
+              .next('main')
+              .slideUp('fast');
           }
         });
       });
